--- a/Benchmark/Benchmark.csproj
+++ b/Benchmark/Benchmark.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <PackageReference Include="Arc.Collections" Version="1.8.0" />
     <PackageReference Include="Arc.Crypto" Version="1.21.0" />
+    <PackageReference Include="Tinyhand" Version="0.70.0" />
+    <PackageReference Include="ValueLink" Version="0.50.0" />
     
     <PackageReference Include="BenchmarkDotNet" Version="0.13.10" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507">
@@ -24,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LPEssentials\LPEssentials.csproj" />
+    <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
   </ItemGroup>
 
 </Project>
