--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,9 @@ jobs:
     name: Build, Pack & Publish
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
     - name: Install dependencies
@@ -19,9 +19,9 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
 
     - name: Package1
-      run: dotnet pack -c Release -o bin LPEssentials/LPEssentials.csproj
-    - name: Package2
       run: dotnet pack -c Release -o bin Netsphere/Netsphere.csproj
+    - name: Package2
+      run: dotnet pack -c Release -o bin Netsphere.RemoteData/Netsphere.RemoteData.csproj
     - name: Package3
       run: dotnet pack -c Release -o bin LP/LP.csproj
       
