--- a/.github/workflows/dockerhub_main.yml
+++ b/.github/workflows/dockerhub_main.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          file: ./.docker/dev_amd64.Dockerfile
+          file: ./.docker/main_amd64.Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           provenance: false
