--- a/LPRunner/LPRunner.csproj
+++ b/LPRunner/LPRunner.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\Netsphere.Remote\Netsphere.Remote.csproj" />
   </ItemGroup>
 
 </Project>
