--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -48,5 +48,9 @@
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Netsphere.Interfaces\Netsphere.Interfaces.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Net\NetNode\" />
+  </ItemGroup>
 
 </Project>
