--- a/Netsphere.Runner/Netsphere.Runner.csproj
+++ b/Netsphere.Runner/Netsphere.Runner.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\Netsphere.Interfaces\Netsphere.Interfaces.csproj" />
+    <ProjectReference Include="..\Netsphere.Shared\Netsphere.Shared.csproj" />
   </ItemGroup>
 
 </Project>
