--- a/Tests/NetsphereTest/NetsphereTest.csproj
+++ b/Tests/NetsphereTest/NetsphereTest.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\..\Netsphere.Interfaces\Netsphere.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Netsphere.Shared\Netsphere.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
