--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Package1
       run: dotnet pack -c Release -o bin Netsphere/Netsphere.csproj
     - name: Package2
-      run: dotnet pack -c Release -o bin Netsphere.Interfaces/Netsphere.Interfaces.csproj
+      run: dotnet pack -c Release -o bin Netsphere.Shared/Netsphere.Shared.csproj
     - name: Package3
       run: dotnet pack -c Release -o bin LP/LP.csproj
       
