--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -26,9 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Strings\Seedphrases" />
-    <EmbeddedResource Include="Strings\strings-en.tinyhand" />
-    <EmbeddedResource Include="Strings\strings-ja.tinyhand" />
+    <EmbeddedResource Include="Misc\Strings\Seedphrases" />
+    <EmbeddedResource Include="Misc\Strings\strings-en.tinyhand" />
+    <EmbeddedResource Include="Misc\Strings\strings-ja.tinyhand" />
   </ItemGroup>
 
   <ItemGroup>
