--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -51,5 +51,9 @@
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Netsphere.Shared\Netsphere.Shared.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="SubCommands\Info\" />
+  </ItemGroup>
 
 </Project>
