--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Arc.Threading" Version="0.29.0" />
     <PackageReference Include="CrystalData" Version="0.18.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
       <PrivateAssets>all</PrivateAssets>
