--- a/LpConsole/LpConsole.csproj
+++ b/LpConsole/LpConsole.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <ServerGarbageCollection>true</ServerGarbageCollection>
+    <CETCompat>false</CETCompat>
   </PropertyGroup>
 
   <ItemGroup>
