--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <CETCompat>false</CETCompat>
   </PropertyGroup>
 
   <ItemGroup>
