--- a/Benchmark/Benchmark.csproj
+++ b/Benchmark/Benchmark.csproj
@@ -6,6 +6,7 @@
     <LangVersion>default</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <LangVersion>Preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +17,7 @@
     <PackageReference Include="Arc.Collections" Version="1.22.1" />
     <PackageReference Include="Arc.Crypto" Version="1.39.1" />
     <PackageReference Include="Netsphere" Version="0.23.1" />
-    <PackageReference Include="Tinyhand" Version="0.100.1" />
+    <PackageReference Include="Tinyhand" Version="0.100.2" />
     <PackageReference Include="ValueLink" Version="0.77.0" />
     
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
