--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>Preview</LangVersion>
 
     <PackageId>Lp</PackageId>
     <Authors>archi-Doc</Authors>
