--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -45,6 +45,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Tinyhand" Version="0.102.1" />
+    <PackageReference Include="ValueLink" Version="0.78.0" />
   </ItemGroup>
 
 </Project>
