--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Arc.Collections" Version="1.25.2" />
     <PackageReference Include="Arc.Threading" Version="0.30.2" />
     <PackageReference Include="CrystalData" Version="0.30.0" />
     <PackageReference Include="Netsphere" Version="0.33.0" />
