--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -39,15 +39,16 @@
   <ItemGroup>
     <PackageReference Include="Arc.Collections" Version="1.25.4" />
     <PackageReference Include="Arc.Threading" Version="0.33.1" />
-    <PackageReference Include="CrystalData" Version="0.31.5" />
+    <PackageReference Include="BigMachines" Version="0.46.1" />
+    <PackageReference Include="CrystalData" Version="0.32.0" />
     <PackageReference Include="Netsphere" Version="0.37.0" />
     <PackageReference Include="Netsphere.Shared" Version="0.37.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Tinyhand" Version="0.124.2" />
-    <PackageReference Include="ValueLink" Version="0.95.1" />
+    <PackageReference Include="Tinyhand" Version="0.125.0" />
+    <PackageReference Include="ValueLink" Version="0.97.2" />
   </ItemGroup>
 
 </Project>
