--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -41,8 +41,9 @@
     <PackageReference Include="Arc.Threading" Version="0.35.0" />
     <PackageReference Include="BigMachines" Version="0.48.0" />
     <PackageReference Include="CrystalData" Version="0.35.1" />
-    <PackageReference Include="Netsphere" Version="0.39.0" />
-    <PackageReference Include="Netsphere.Shared" Version="0.39.0" />
+    <PackageReference Include="Netsphere" Version="0.39.1" />
+    <PackageReference Include="Netsphere.Shared" Version="0.39.1" />
+    <PackageReference Include="SimpleCommandLine" Version="0.28.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
