--- a/Lp/Lp.csproj
+++ b/Lp/Lp.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="Arc.Collections" Version="1.26.1" />
     <PackageReference Include="Arc.Crypto" Version="1.41.4" />
     <PackageReference Include="Arc.Threading" Version="0.35.0" />
+    <PackageReference Include="Arc.Unit" Version="0.25.0" />
     <PackageReference Include="BigMachines" Version="0.51.0" />
     <PackageReference Include="CrystalData" Version="0.36.4" />
     <PackageReference Include="Netsphere" Version="0.40.8" />
